# Assignment

Deploy_Own_LLM/: README.md
LeetCodeProblem/python/: index.ipynb
LeetCodeProblem/typescript/: index.ts
Nextjs_ui_components/: sheet_with_links.tsx  simplesigniform.tsx
Zapier/: README.md
armantodo/: package-lock.json  package.json
armantodo/prisma/: schema.prisma
email_sender/: pyproject.toml
email_sender/email_sender/: db_connections.py  email_sender_fun.py  login_successful_email.html  main.py  reset_password_email.html  send_mail.py  settings.py  verification_email.html
email_sender/email_sender/model/: user.py
email_sender/email_sender/routes/: admin.py  user.py
email_sender/email_sender/utils/: utils.py
generative_ai_assignment/Fundamentals_of_Generative_AI _ Assignment 01/: README.md
generative_ai_assignment/Fundamentals_of_Generative_AI_5_assignment/: README.md
imagesavelocallay/: page.tsx  route.ts
lahoreClasses/: lahore2ndclass.ipynb
machine_learningw3school/: index.ipynb
nextjs/: New Text Document.txt  responsive_drawer.tsx  testonominal.html
ollama/: README.md
python_assignment/: emailsender.py
python_assignment/Fundamentals_of_Generative_AI _ Assignment 01/: README.md
python_assignment/GAN_explanations/: README.md
python_assignment/Python_Programmig_Assignment_03/: Dockerfile  compose.yml  main.py
python_assignment/Python_Programming_Assignment 02/: index.ipynb
python_assignment/Python_Programming_Assignment_04/: index.ipynb
python_assignment/first_assignmet/: index.ipynb
python_code/: different_routsauth.txt
(+28 files in other folders)
